--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Document Scanner</string>
+    <string name="app_name">ConText Scanner</string>
 
-    <string name="title_activity_document_scanner">Document Scanner</string>
+    <string name="title_activity_document_scanner">ConText Scanner</string>
     <string name="title_activity_gallery">Document Gallery</string>
     <string name="title_activity_full_image">Scanned Image Viewer</string>
     <string name="images_scanned">Images Scanned</string>
@@ -33,10 +33,9 @@
     <string name="send_message">Send Message</string>
     <string name="send_message_summary">Send message to developer</string>
     <string name="stats_optin_title">Usage Stats</string>
-    <string name="stats_optin_text">Do you want to enable Document Scanner to send anonymous usage statistics to the developer?\n\nYou can change this anytime on the settings screen.</string>
+    <string name="stats_optin_text">Do you want to enable ConText Scanner to send anonymous usage statistics to the developer?\n\nYou can change this anytime on the settings screen.</string>
     <string name="answer_later">Later</string>
     <string name="activateunknown">Go to Settings</string>
-    <string name="messageactivateunknown">Google Play isn\'t available and Install from Unknown Sources is disabled, please go to Settings and activate it.</string>
     <string name="feedback">Feedback</string>
     <string name="filterModeOn">Image Processor On</string>
     <string name="filterModeOff">Image Processor Off</string>
